# 2019-12-12-sourmash_viz

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Snakefile  environment.yml  example_output.csv  gather-to-opal.py  opal_report.py  pyproject.toml  script.py  summarize_taxlevel.ipynb  test_gto.py  tox.ini
.github/workflows/: ci.yml
envs/: taxonomy.yml
src/: gather_to_opal.py
tests/: test_gto.py
